[project]
name = "ps-study"
version = "0.1.0"
description = "PS Study Repository."
authors = [
    {name = "Lapis",email = "lapis0875@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
